# fimo

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYRIGHT.md  Cargo.toml  Fimo.toml  LICENSE-MIT  README.md  build.zig  build.zig.zon  clang-format  requirements.txt  tsan  x.py
ffi_library/: CMakeLists.txt
ffi_library/fimo_python_meta/: build.zig  build.zig.zon
ffi_library/fimo_python_meta/include/fimo_python_meta/: loader.h
ffi_library/fimo_python_meta/src/: root.zig
ffi_library/fimo_std/: CMakeLists.txt  build.zig  build.zig.zon
ffi_library/fimo_std/include/fimo_std/: array_list.h  async.h  char.h  error.h  (+12 more)
ffi_library/fimo_std/src/: AnyError.zig  Version.zig  array_list.c  c.zig  char.c  context.c  context.zig  error.c  errors.zig  graph.c  heap.zig  memory.c  module.c  module.zig  path.c  path.zig  refcount.c  root.zig  time.c  time.zig  tracing.c  version.c  version.zig
ffi_library/fimo_std/tests/: CMakeLists.txt  context.cpp  event_loop.zig  graph.cpp  init_context.zig  load_local_modules.zig  memory.cpp  module_subsystem.cpp  path.cpp  test_ascii.c  test_context.c  test_empty.c  test_graph.c  test_memory.c  test_module_subsystem.c  test_unicode.c
ffi_library/fimo_std/tools/: gdbscript_to_c.zig
ffi_library/fimo_tasks/: CMakeLists.txt
ffi_library/fimo_tasks_meta/: build.zig  build.zig.zon
ffi_library/fimo_tasks_meta/src/: command_buffer.zig  pool.zig  root.zig  symbols.zig  task.zig  testing.zig
ffi_library/python_module_loader/: CMakeLists.txt
fimo_bootstrap_rs/: Cargo.toml
fimo_bootstrap_rs/src/: core_loader.rs  dependency_list.rs  error.rs  lib.rs  manifest.rs
fimo_tests/: Cargo.toml
fimo_tests/src/: lib.rs
fimo_tests/tests/: lib.rs
fimo_tests/tests/actix/: mod.rs
fimo_tests/tests/core/: mod.rs
fimo_version_rs/: Cargo.toml
fimo_version_rs/src/: lib.rs
interfaces/fimo_actix_int/: Cargo.toml
interfaces/fimo_actix_int/src/: lib.rs
interfaces/fimo_core_int/: Cargo.toml
interfaces/fimo_core_int/src/: lib.rs  modules.rs  rust.rs  settings.rs
interfaces/fimo_core_interface/: Cargo.toml
interfaces/fimo_core_interface/src/: rust.rs
interfaces/fimo_logging_int/: Cargo.toml
interfaces/fimo_logging_int/src/: lib.rs
interfaces/fimo_tasks_int/: Cargo.toml
interfaces/fimo_tasks_int/src/: lib.rs  raw.rs  runtime.rs  rust.rs  sync.rs  task.rs
modules/: CMakeLists.txt
modules/fimo_actix/: Cargo.toml  FimoModule.toml
modules/fimo_actix/src/: lib.rs  module.rs
modules/fimo_actix/tests/: startup.rs
modules/fimo_base/: Cargo.toml
modules/fimo_base/src/: base.rs  base_api.rs  base_interface.rs  data_guard.rs  fimo_base.rs  key_generator.rs  lib.rs  module_interface.rs
modules/fimo_core/: Cargo.toml  FimoModule.toml
modules/fimo_core/examples/: hello_dynamic.rs
modules/fimo_core/src/: core_interface.rs  core_module.rs  lib.rs  module.rs  module_registry.rs  modules.rs  settings.rs  settings_registry.rs
modules/fimo_core/tests/: dynamic_loading.rs
modules/fimo_logging/: Cargo.toml  FimoModule.toml
modules/fimo_logging/src/: lib.rs  module.rs
modules/fimo_python/: build.zig  build.zig.zon
modules/fimo_python/src/: main.c  root.zig
modules/fimo_python/tests/: run_string.zig
modules/fimo_tasks/: Cargo.toml  FimoModule.toml  build.zig  build.zig.zon
modules/fimo_tasks/src/: CmdBuf.zig  CommandBuffer.zig  Executor.zig  FimoTasks.zig  Futex.zig  ParkingLot.zig  Pool.zig  PoolMap.zig  Runtime.zig  Task.zig  Worker.zig  channel.zig  context.zig  fimo_export.zig  item_pool.zig  lib.rs  module.rs  mpsc_channel.zig  raw_task.rs  root.zig  runtime.rs  scheduler.rs  spin_wait.rs  spmc_channel.zig  stack_allocator.rs  task_manager.rs  task_runtime_inner.rs  task_scheduler.rs  task_worker.rs  worker_pool.rs
modules/fimo_tasks/tests/: runtime.rs  tasks_module.rs
modules/fimo_tasks_impl/: CMakeLists.txt  Cargo.toml
modules/fimo_tasks_impl/src/: context.rs  lib.rs  module_export.rs  worker_group.rs
modules/fimo_worlds/: build.zig  build.zig.zon
modules/fimo_worlds/src/: FimoWorlds.zig  System.zig  SystemContext.zig  SystemGroup.zig  Universe.zig  World.zig  fimo_export.zig  heap.zig  root.zig
modules/python_module_loader/: CMakeLists.txt  build.zig  build.zig.zon
modules/python_module_loader/src/: main.c  root.zig
modules/python_module_loader/tests/: CMakeLists.txt  run_string.cpp
modules/rust/fimo_tasks_impl/: Cargo.toml
rust/fimo_std/: CMakeLists.txt  Cargo.toml  build.rs  build.zig  build.zig.zon  ffi  wrapper.h
rust/fimo_std/macros/: Cargo.toml
rust/fimo_std/src/: allocator.rs  array_list.rs  async.rs  bindings.rs  context.rs  error.rs  ffi.rs  graph.rs  lib.rs  macros.rs  module.rs  modules.rs  panic.rs  refcount.rs  tasks.rs  time.rs  tracing.rs  utils.rs  version.rs
rust/fimo_std/tests/: event_loop.rs  module_subsystem.rs
rust/fimo_tasks/: CMakeLists.txt  Cargo.toml  build.rs  wrapper.h
rust/fimo_tasks/ffi/: fimo_std  fimo_tasks
rust/fimo_tasks/src/: bindings.rs  command_buffer.rs  lib.rs  local.rs  symbols.rs  task.rs  worker_group.rs
rust/fimo_tasks_meta/: Cargo.toml  build.rs
rust/fimo_tasks_meta/ffi/: fimo_std  fimo_tasks_meta
rust/fimo_tasks_meta/src/: command_buffer.rs  lib.rs  local.rs  symbols.rs  task.rs  worker_group.rs
test_utilities/module_loading/: Cargo.toml
test_utilities/module_loading/src/: lib.rs
utilities/fimo_actix_interface/: Cargo.toml
utilities/fimo_actix_interface/src/: lib.rs
utilities/fimo_core_interface/: Cargo.toml
utilities/fimo_core_interface/src/: lib.rs  rust.rs
utilities/fimo_ffi/: Cargo.toml
utilities/fimo_ffi/src/: cell.rs  error.rs  ffi_fn.rs  fmt.rs  fn_wrapper.rs  lib.rs  marker.rs  marshal.rs  obj_arc.rs  obj_box.rs  optional.rs  path.rs  provider.rs  ptr.rs  result.rs  span.rs  str.rs  string.rs  tuple.rs  type_id.rs  vec.rs  version.rs
utilities/fimo_ffi_codegen/: Cargo.toml
utilities/fimo_ffi_codegen/src/: ctypebridge.rs  interface.rs  lib.rs  object.rs  stable_type_id.rs  vtable.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs  task_harness.rs
(+450 files in other folders)
