[package]
name = "fimo_bootstrap_rs"
version = "0.1.0"
authors = ["Gabriel Borrelli <gabriel.borrelli@nanoshellsoft.com>"]
edition = "2018"
description = "Utilities for initialising an emf-core-base instance"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
petgraph = "0.5.1"
serde_json = "1.0"
libloading = "0.6"
emf-core-base-rs = "0.1.3"
serde = { version = "1.0.123", features = ["derive"] }
fimo_version_rs = { version = "0.1.0", path = "../fimo_version_rs" }