[package]
name = "fimo_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
fimo_ffi = { version = "0.1.0", path = "../utilities/fimo_ffi" }
fimo_module = { version = "0.1.0", path = "../utilities/fimo_module" }

[dev-dependencies]
fimo_core_int = { version = "0.1.0", path = "../interfaces/fimo_core_int" }
fimo_logging_int = { version = "0.1.0", path = "../interfaces/fimo_logging_int" }
fimo_tasks_int = { version = "0.1.0", path = "../interfaces/fimo_tasks_int" }