[package]
name = "fimo_core_int"
version = "0.1.0"
edition = "2021"
description = "`fimo-core` interface definition"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[dependencies]
regex = "1.4.3"
lazy_static = "1.4.0"
serde = { version = "1.0.123", features = ["derive"] }
fimo_ffi = { version = "0.1.0", path = "../../utilities/fimo_ffi" }
fimo_module = { version = "0.1.0", path = "../../utilities/fimo_module" }

[dev-dependencies]
# Ensure that the module is built when running tests.
fimo_core = { path = "../../modules/fimo_core" }