[package]
name = "fimo_core_int"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "`fimo-core` interface definition"
categories = ["game-development"]

[dependencies]
regex = "1.4.3"
lazy_static = "1.4.0"
serde = { version = "1.0.123", features = ["derive"] }
fimo_ffi = { version = "0.1.0", path = "../../utilities/fimo_ffi" }
fimo_module = { version = "0.1.0", path = "../../utilities/fimo_module" }
