[package]
name = "fimo_core_interface"
version = "0.1.0"
edition = "2021"
description = "`fimo-core` interface definition"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[dependencies]
regex = "1.4.3"
lazy_static = "1.4.0"
serde = { version = "1.0.123", features = ["derive"] }
fimo_ffi = { version = "0.1.0", path = "../../utilities/fimo_ffi" }
fimo_module_core = { version = "0.1.0", path = "../../utilities/fimo_module_core" }
fimo_version_core = { version = "0.1.0", path = "../../utilities/fimo_version_core" }
