[package]
name = "fimo_logging_int"
version = "0.1.0"
edition = "2021"
description = "`fimo-logging` interface definition"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fimo_ffi = { version = "0.1.0", path = "../../utilities/fimo_ffi" }
fimo_module = { version = "0.1.0", path = "../../utilities/fimo_module" }