[package]
name = "fimo_tasks_int"
version = "0.1.0"
edition = "2018"
description = "`fimo-tasks` interface definition"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13"
parking_lot = "0.11"
static_assertions = "1.1.0"
fimo_core_int = { version = "0.1.0", path = "../fimo_core_int" }
fimo_ffi = { version = "0.1.0", path = "../../utilities/fimo_ffi" }
fimo_module = { version = "0.1.0", path = "../../utilities/fimo_module" }
fimo_version_core = { version = "0.1.0", path = "../../utilities/fimo_version_core" }
