[package]
name = "fimo_tasks_int"
version = "0.1.0"
edition = "2018"
description = "`fimo-tasks` interface definition"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
atomic = "0.5.1"
rand = { version = "0.8.5", features = ["small_rng"] }
fimo_ffi = { version = "0.1.0", path = "../../utilities/fimo_ffi" }
fimo_module = { version = "0.1.0", path = "../../utilities/fimo_module" }