[package]
name = "fimo_actix"
version = "0.1.0"
edition = "2021"
description = "fimo-actix module"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
futures = "0.3.17"
parking_lot = "0.11"
static_assertions = "1.1.0"
serde = { version = "1.0.123", features = ["derive"] }
fimo_version_core = { version = "0.1.0", path = "../../utilities/fimo_version_core" }
fimo_generic_module = { version = "0.1.0", path = "../../utilities/fimo_generic_module" }
fimo_actix_int = { version = "0.1.0", path = "../../interfaces/fimo_actix_int" }
fimo_ffi = { version = "0.1.0", path = "../../utilities/fimo_ffi", optional = true }
fimo_module = { version = "0.1.0", path = "../../utilities/fimo_module", optional = true }
fimo_core_int = { version = "0.1.0", path = "../../interfaces/fimo_core_int", optional = true }

[dev-dependencies]
serde_json = "1.0.68"
reqwest = { version = "0.11.4", features = ["blocking"] }
module_loading = { path = "../../test_utilities/module_loading" }

[features]
default = ["rust_module"]
module = ["fimo_ffi", "fimo_module", "fimo_core_int"]
rust_module = ["module"]