[package]
name = "fimo_actix"
version = "0.1.0"
edition = "2021"
description = "fimo-actix module"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
actix-rt = "2.6.0"
parking_lot = "0.11"
futures = { version = "0.3.17", optional = true }
serde = { version = "1.0.123", features = ["derive"] }
fimo_ffi = { version = "0.1.0", path = "../../utilities/fimo_ffi" }
fimo_module = { version = "0.1.0", path = "../../utilities/fimo_module" }
fimo_actix_int = { version = "0.1.0", path = "../../interfaces/fimo_actix_int" }
fimo_core_int = { version = "0.1.0", path = "../../interfaces/fimo_core_int", optional = true }

[features]
default = []
module = [ "futures", "fimo_core_int"]