[package]
name = "fimo_base"
version = "0.1.0"
edition = "2018"
description = "Base module of the fimo engine"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[lib]
crate-type = ["dylib"]

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.11.1"
thread_local = "1.1.3"
emf-core-base-rs = "0.1.3"
fimo_version_rs = { version = "0.1.0", path = "../../fimo_version_rs" }

[features]
default = ["emf-core-base-rs/unwind_internal"]