[package]
name = "fimo_base"
version = "0.1.0"
edition = "2018"
description = "Base module of the fimo engine"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[lib]
crate-type = ["dylib"]

[dependencies]
serde_json = "1.0"
lazy_static = "1.4.0"
parking_lot = "0.11.1"
thread_local = "1.1.3"
libloading = "0.7.0"
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
fimo_ffi_core = { version = "0.1.0", path = "../../utilities/fimo_ffi_core" }
fimo_module_core = { version = "0.1.0", path = "../../utilities/fimo_module_core" }
fimo_version_rs = { version = "0.2.0-unstable.0", path = "../../fimo_version_rs" }
emf-core-base-rs = { git = "https://github.com/fimoengine/emf-rs", version = "0.2.0-unstable.0" }
fimo_version_core = { version = "0.1.0", path = "../../utilities/fimo_version_core", features = ["serde"] }

[features]
default = ["emf-core-base-rs/unwind_internal"]