[package]
name = "fimo_core"
version = "0.1.0"
edition = "2021"
description = "Core module of the fimo engine"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
regex = "1.4.3"
serde_json = "1.0"
libloading = "0.7.0"
lazy_static = "1.4.0"
parking_lot = "0.11.1"
static_assertions = "1.1.0"
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
fimo_ffi_core = { version = "0.1.0", path = "../../utilities/fimo_ffi_core" }
fimo_module_core = { version = "0.1.0", path = "../../utilities/fimo_module_core" }
fimo_generic_module = { version = "0.1.0", path = "../../utilities/fimo_generic_module" }
fimo_core_interface = { version = "=0.1.0", path = "../../interfaces/fimo_core_interface" }
fimo_version_core = { version = "0.1.0", path = "../../utilities/fimo_version_core", features = ["serde"] }

[dev-dependencies]
module_paths = { path = "../../test_utilities/module_paths" }
module_loading = { path = "../../test_utilities/module_loading" }

[features]
default = ["default_module_loaders", "rust_module"]
module = []
rust_module = ["module"]
rust_module_loader = []
default_module_loaders = ["rust_module_loader"]
