[package]
name = "fimo_core"
version = "0.1.0"
edition = "2021"
description = "Core module of the fimo engine"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
serde_json = "1.0"
parking_lot = "0.11.1"
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
fimo_ffi = { version = "0.1.0", path = "../../utilities/fimo_ffi" }
fimo_core_int = { version = "=0.1.0", path = "../../interfaces/fimo_core_int" }
fimo_module = { version = "0.1.0", path = "../../utilities/fimo_module" }

[dev-dependencies]
module_loading = { path = "../../test_utilities/module_loading" }

[features]
default = ["default_module_loaders", "rust_module"]
module = []
rust_module = ["module"]
rust_module_loader = []
default_module_loaders = ["rust_module_loader"]
