[package]
name = "fimo_core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Core module of the fimo engine"
categories = ["game-development"]

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
serde_json = "1.0"
parking_lot = "0.11.1"
serde = { version = "1.0.123", features = ["derive"] }
fimo_ffi = { version = "0.1.0", path = "../../utilities/fimo_ffi" }
fimo_core_int = { version = "=0.1.0", path = "../../interfaces/fimo_core_int" }
fimo_module = { version = "0.1.0", path = "../../utilities/fimo_module" }

[features]
default = ["default_module_loaders"]
module = []
rust_module = ["module"]
rust_module_loader = []
default_module_loaders = ["rust_module_loader"]
