[package]
name = "fimo_logging"
version = "0.1.0"
edition = "2021"
description = "Fimo engine logging utility"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
parking_lot = "0.11"
fimo_ffi = { version = "0.1.0", path = "../../utilities/fimo_ffi" }
fimo_module = { version = "0.1.0", path = "../../utilities/fimo_module" }
fimo_logging_int = { version = "0.1.0", path = "../../interfaces/fimo_logging_int" }

[features]
default = ["module"]
module = []