[package]
name = "fimo_tasks"
version = "0.1.0"
edition = "2021"
description = "Fimo engine task runtime"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
log = "0.4.14"
context = "2.0"
num_cpus = "1.13.1"
parking_lot = "0.11"
crossbeam-deque = "0.8"
fimo_ffi = { version = "0.1.0", path = "../../utilities/fimo_ffi" }
fimo_module = { version = "0.1.0", path = "../../utilities/fimo_module" }
fimo_tasks_int = { version = "0.1.0", path = "../../interfaces/fimo_tasks_int" }
fimo_core_int = { version = "0.1.0", path = "../../interfaces/fimo_core_int", optional = true }

[dev-dependencies]
pretty_env_logger = "0.4.0"
module_loading = { path = "../../test_utilities/module_loading" }

[features]
default = ["module"]
module = ["fimo_core_int"]